--- a/angular.json
+++ b/angular.json
@@ -35,9 +35,13 @@
               "src/assets"
             ],
             "styles": [
+
               "src/styles.css"
+
             ],
-            "scripts": [],
+            "scripts": [
+                        "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+                        ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
